--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Product Landing Page</title>
+    <title>Login page</title>
   </head>
   <body>
     <img class="wave" src="img/wave.png" alt="wave image form undraw" />
